fix: change list-view overflow to visible to allow vertical stickiness of child list-header

--- a/css/components.css
+++ b/css/components.css
@@ -391,7 +391,7 @@ input[type="number"] {
     display: flex;
     flex-direction: column;
     gap: 12px;
-    overflow-x: auto;
+    overflow: visible;
     width: 100%;
 }
 
